--- a/views/news.erb
+++ b/views/news.erb
@@ -30,26 +30,26 @@
 
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Welcome</a>
+      <a class="navbar-brand" href="#">Your Info</a>
       </div>
   </nav>
 
-  <header class="masthead text-gray text-center">
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">Want an updated report of your local news and weather forecast?</h1>
-        </div>
-        <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-        <form action="/news">
-            <input type="text" name="location">
-            <button type="submit" class="btn btn-primary">Let's go!</submit>
-        </form>
-        </div>
-      </div>
-    </div>
-  </header>
+#   <header class="masthead text-gray text-center">
+#     <div class="overlay"></div>
+#     <div class="container">
+#       <div class="row">
+#         <div class="col-xl-9 mx-auto">
+#           <h1 class="mb-5">Want an updated report of your local news and weather forecast?</h1>
+#         </div>
+#         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+#         <form action="/news">
+#             <input type="text" name="location">
+#             <button type="submit" class="btn btn-primary">Let's go!</submit>
+#         </form>
+#         </div>
+#       </div>
+#     </div>
+#   </header>
 
   
     
