--- a/views/news.erb
+++ b/views/news.erb
@@ -63,7 +63,7 @@
         <h3> Next week's forecast </h3>
         <% for day in @weekly_summary %>
         <div class="container mt-5">
-        <%=[summary]%>
+        # <%=[summary]%>
         </div>
         <% end %>  
 
