--- a/views/news.erb
+++ b/views/news.erb
@@ -61,9 +61,8 @@
       </div>
     <div class="col-sm-4 text-center">
         <h3> Next week's forecast </h3>
-        <% for day in @weekly_summary %>
         <div class="container mt-5">
-        # <%=[summary]%>
+        <%=@weekly_summary%>
         </div>
         <% end %>  
 
