--- a/views/ask.erb
+++ b/views/ask.erb
@@ -18,7 +18,7 @@
     <!-- Your own CSS -->
     <link rel="stylesheet" href="/styles.css">
 
-    <title>All you need</title>
+    <title>All you need to start your day</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -30,7 +30,7 @@
 
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Welcome</a>
+      <a class="navbar-brand" href="#">Welcome!</a>
       </div>
   </nav>
 
@@ -39,7 +39,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">Want an updated report of your local news and weather forecast?</h1>
+          <h1 class="mb-5">Want a report of updated news and your local weather forecast?</h1>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
         <form action="/news">
@@ -51,7 +51,12 @@
     </div>
   </header>
 
-  
+<footer class="page-footer font-small blue">
+
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href="https://fclarog.github.io/"> fclarog.github.io</a>
+  </div>
+ </footer>
     
 
     <!-- Optional JavaScript -->
