--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,7 @@
 body {
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  background-color: lightsteelblue
+
 }
 
 h1,
@@ -45,3 +47,6 @@ header.masthead h1 {
     font-size: 3rem;
   }
 }
+
+.container mt-5 {background-color: lightsteelblue}
+
